Update review from any exercise instructror view Enhanced mobile view for unit statistics and unit user statistics Mobile course instructor navbar updates Disabled review score form if need Change review score in user unit statistics Lock review in user unit statistics after checking or after 30 seconds And others..

--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -211,7 +211,7 @@
 		{
 			var checking = (ManualExerciseChecking)context.ManualChecking;
 
-			@Html.Partial("~/Views/Exercise/_ExerciseScoreForm.cshtml", new ExerciseScoreFormModel(context.Course.Id, (ExerciseSlide) context.Slide, checking, context.GroupId))
+			@Html.Partial("~/Views/Exercise/_ExerciseScoreForm.cshtml", new ExerciseScoreFormModel(context.Course.Id, (ExerciseSlide) context.Slide, checking, context.GroupId, context.VersionId == null || checking.Submission.Id == context.VersionId))
 		}
 	</div>
 }
