--- a/src/uLearn.Web/Content/Site.css
+++ b/src/uLearn.Web/Content/Site.css
@@ -75,6 +75,24 @@ input[type="checkbox"].input-validation-error {
 	color: #D8D8D8;
 }
 
+@media (max-width: 767px) {
+	h1 {
+		font-size: 25px;
+	}
+
+	h1 small {
+		font-size: 21px;
+	}
+
+	h2 {
+		font-size: 19px;
+	}
+
+	h2 small {
+		font-size: 15px;
+	}
+}
+
 h1 > a:hover,
 h1 > a:active,
 h1 > a:focus,
@@ -119,10 +137,18 @@ a.no-underline:focus {
 	height: 20px;
 }
 
-.ml10 {
-	margin-left: 10px;
+.ml10 { margin-left: 10px; }
+.mt10 { margin-top: 10px; }
+
+.hidden-xs-inline { display: inline-block !important; }
+.visible-xs-inline { display: none !important; }
+
+@media (min-width: 768px) {
+	.sm-ml10 { margin-left: 10px; }
+	.sm-mt10 { margin-top: 10px; }
 }
 
-.mt10 {
-	margin-top: 10px;
+@media (max-width: 767px) {
+	.hidden-xs-inline { display: none !important; }
+	.visible-xs-inline { display: inline-block !important; }
 }
