--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -58,10 +58,17 @@ p {
 }
 
 .internal-page-link.active {
-    color: black;
     border-bottom: none;
     font-weight: bold;
     pointer-events: none;
+}
+
+.internal-page-link.active:not(.text-muted) {
+	color: black;
+}
+
+.internal-page-menu a {
+	margin: 0 5px;
 }
 
 .inline-select {
@@ -1221,6 +1228,12 @@ table.analytics__user-answers {
 	margin-bottom: 0;
 }
 
+@media (max-width:768px) {
+	.analytics__dashboard .student-progress {
+		width: 90px;
+	}
+}
+
 .analytics__dashboard .large-number {
     text-align: center;
     font-size: 40pt;
@@ -1400,8 +1413,8 @@ table.analytics__user-answers {
 	content: "Нет вывода программы"
 }
 
-.user-submission + .user-submission {
-	margin-top: 15px;
+.user-submission {
+	margin-top: 20px;
 }
 
 .user-submission__info {
@@ -1422,13 +1435,28 @@ table.analytics__user-answers {
 	.user-submission {
 		overflow: hidden;
 		min-height: 110px;
+		position: relative;
+		margin-left: -15px;
+		margin-right: -15px;
+		padding: 0 15px;
 	}
 
 	.user-submission__info {
-		position: fixed;
-		z-index: 2;
+		position: absolute;
+		z-index: 3;
 		width: 100%;
-		height: 110px;
+		min-height: 110px;
+		padding-top: 20px;
+	}
+
+	.user-submission__info h3 {
+		font-size: 15px;
+		font-weight: 700;
+		height: 16px;
+		max-height: 16px;
+		overflow: hidden;
+		-moz-text-overflow: ellipsis;
+		text-overflow: ellipsis;
 	}
 
 	.user-submission__info .hint {
@@ -1436,6 +1464,18 @@ table.analytics__user-answers {
 		font-size: 12px;
 		color: #696;
 		margin-top: 10px;
+	}
+
+	.user-submission h4 {
+		font-size: 16px;
+	}
+
+	.user-submission .exercise__simple-score-form {
+		border-top: 1px solid #9c9;
+		border-bottom: 1px solid #9c9;
+		padding: 0 15px;
+		margin: 0 -15px;
+		min-height: 110px;
 	}
 }
 
