--- a/src/uLearn.Web/Views/Analytics/UserUnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UserUnitStatistics.cshtml
@@ -12,16 +12,19 @@
 		{
 			var slide = (ExerciseSlide)Model.Slides[submission.SlideId];
 			var block = slide.Exercise;
+			var manualScore = -1;
 			if (!block.RequireReview)
 			{
 				continue;
 			}
 			<div class="user-submission">
 				<div class="user-submission__info">
-					<h3 class="title">@slide.Title</h3>
+					<h3 class="title">@slide.Title.TruncateWithEllipsis(30) (<span class="total-score">@Model.Scores[slide.Id]</span> из @block.MaxScore)</h3>
 					<div class="date">
 						Сдана <span title="@submission.Timestamp.ToPrettyString(true)">@submission.Timestamp.ToAgoPrettyString(true)</span>,
-						@Html.ActionLink("смотреть код", "UserSolutions", "Analytics", new { courseId = submission.CourseId, slideId = slide.Id, userId = submission.UserId }, new { target = "_blank" })
+						<a href="@Url.Action("UserSolutions", "Analytics", new { courseId = submission.CourseId, slideId = slide.Id, userId = submission.UserId })" target="_blank">
+							<span class="hidden-xs-inline">смотреть</span> код
+						</a>
 					</div>
 					<div class="hint">смахните вправо для оценки &rarr;</div>
 				</div>
@@ -29,14 +32,25 @@
 				<form method="POST" action="@Url.Action("SimpleScoreExercise", "Exercise")" class="exercise__simple-score-form">
 					<input type="hidden" name="submissionId" value="@submission.Id"/>
 
-					<h4>Код-ревью (максимальный балл @block.MaxReviewScore)</h4>
+					<p>Код-ревью
+						@if (submission.ManualCheckings.Any(c => c.IsChecked))
+						{
+							manualScore = submission.ManualCheckings.Max(c => c.Score);
+							<span>(текущая оценка: @manualScore из @block.MaxReviewScore):</span>
+						}
+						else
+						{
+							<span> (максимальный балл @block.MaxReviewScore):</span>
+						}
+					</p>
 					<div class="exercise__score">
 						<input type="hidden" name="exerciseScore"/>
 						<div class="btn-group" role="group">
 							@foreach (var scorePercent in new[] { 0, 25, 50, 75, 100 })
 							{
 								var score = block.MaxReviewScore * scorePercent / 100;
-								<button type="button" class="btn btn-default" data-value="@score">@scorePercent%</button>
+								var isActive = block.MaxReviewScore > 4 && score == manualScore ? "active" : "";
+								<button type="button" class="btn btn-default @isActive" data-value="@score">@scorePercent%</button>
 							}
 						</div>
 						<div class="status"></div>
