--- a/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
+++ b/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
@@ -4,7 +4,7 @@
 {
 	<li><a href="@Url.RouteUrl("Course.Slide", new { Model.CourseId })">@Model.CourseTitle.TruncateWithEllipsis(40)</a></li>
 	<li class="dropdown">
-		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-cog"></span></a>
+		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-cog hidden-xs visible-sm"></span><span class="visible-xs">Преподавателю <span class="caret"></span></span></a>
 		<ul class="dropdown-menu">
 			<li>@Html.ActionLink("Группы", "Groups", "Admin", new { Model.CourseId }, new { })</li>
 			<li>@Html.ActionLink("Аналитика", "UnitStatistics", "Analytics", new { Model.CourseId }, new { })</li>
@@ -17,7 +17,7 @@
 			<li class="divider" role="separator"></li>
 			<li>@Html.ActionLink("Комментарии", "Comments", "Admin", new { Model.CourseId }, new { })</li>
 			<li>@Html.ActionLink("Проверка тестов", "ManualQuizCheckingQueue", "Admin", new { Model.CourseId }, new { })</li>
-			<li>@Html.ActionLink("Код ревью", "ManualExerciseCheckingQueue", "Admin", new { Model.CourseId }, new { })</li>
+			<li>@Html.ActionLink("Код-ревью", "ManualExerciseCheckingQueue", "Admin", new { Model.CourseId }, new { })</li>
 		</ul>
 	</li>
 }
