--- a/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
@@ -34,7 +34,7 @@
 		<h2>
 			@Model.UnitName.TruncateWithEllipsis(25)
 
-			<small><a href="#filters" class="internal-page-link visible-xs-inline ml10">ред.</a></small>
+			<small><a href="#filters" class="visible-xs-inline ml10" data-toggle="true"><span class="no-underline glyphicon glyphicon-filter"></span></a></small>
 			<br class="visible-xs"/>
 			<small class="visible-xs">с @Model.PeriodStart.ToShortDateString() по @Model.PeriodFinish.ToShortDateString()</small>
 		</h2>
@@ -157,13 +157,13 @@
 				<div class="col-xs-12 col-md-6" id="statistics">
 					<h2>Статистика</h2>
 					<div>
-						Посмотрели весь модуль за&nbsp;выбранный период: <strong>@Model.UsersVisitedAllSlidesInPeriodCount</strong>
-					</div>
-					<div>
 						Всего посмотрели весь модуль к&nbsp;@Model.PeriodFinish.ToDatePrettyString(true):
 						<strong>
 							@(Model.UsersVisitedAllSlidesBeforePeriodFinishedCount - Model.UsersVisitedAllSlidesBeforePeriodCount)
 						</strong>
+					</div>
+					<div>
+						Посмотрели весь модуль <strong>за&nbsp;выбранный период</strong>: <strong>@Model.UsersVisitedAllSlidesInPeriodCount</strong>
 					</div>
 
 					<div class="vspace-20"></div>
