Added information about review comments into user unit statistics Added Terms of Use and footer Added list of units in UnitStatistics

--- a/src/uLearn.Web/Content/Site.css
+++ b/src/uLearn.Web/Content/Site.css
@@ -75,6 +75,10 @@ input[type="checkbox"].input-validation-error {
 	color: #D8D8D8;
 }
 
+.navbar .dropdown .glyphicon {
+	line-height: inherit;
+}
+
 @media (max-width: 767px) {
 	h1 {
 		font-size: 25px;
@@ -140,7 +144,7 @@ a.no-underline:focus {
 .ml10 { margin-left: 10px; }
 .mt10 { margin-top: 10px; }
 
-.hidden-xs-inline { display: inline-block !important; }
+.hidden-xs-inline { display: inline !important; }
 .visible-xs-inline { display: none !important; }
 
 @media (min-width: 768px) {
@@ -151,4 +155,17 @@ a.no-underline:focus {
 @media (max-width: 767px) {
 	.hidden-xs-inline { display: none !important; }
 	.visible-xs-inline { display: inline-block !important; }
+}
+
+footer {
+	margin-top: 60px;
+	color: #888;
+}
+
+footer p {
+	margin: 3px 0;
+}
+
+footer:hover {
+	color: #111;
 }
