--- a/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UnitStatistics.cshtml
@@ -217,12 +217,17 @@
 						</div>
 					</div>
 
+					@if (!Model.VisitedUsers.Any())
+					{
+						<div class="text-muted">Здесь пока никого не было...</div>
+					}
+
 					@foreach (var userInfo in Model.VisitedUsers)
 					{
 						var visitedSlidesCount = Model.VisitedSlidesCountByUser[userInfo.UserId];
 						var visitedSlidesCountAllTime = Model.VisitedSlidesCountByUserAllTime[userInfo.UserId];
 						var userVisibleName = userInfo.UserVisibleName != "" ? userInfo.UserVisibleName : userInfo.UserName;
-						<div>
+						<div class="student">
 							<div class="ib" title="@userInfo.UserName">
 								@Html.ActionLink(userVisibleName.TruncateWithEllipsis(25), "UserUnitStatistics", new { courseId = Model.CourseId, unitName = Model.UnitName, userId = userInfo.UserId}, new { title = "Посмотреть статистику пользователя " + userInfo.UserName })
 							</div>
