Show commented parts of code in queue of checked exercices View with list of checked submissions for this user on this slide. Used on simple exercise scoring. Don't show queue filter form on this view Don't decrease code's width if there are no review comments in reviewed code Special case for analytics in september or february: start from at least one month before today Allow to post HTML tags in review comments Lock manual checking on mobile devices by swipping left Send review comments by Ctrl+Enter
Fix bug with hidden-inline and hidden-inline-block styles
Fix settings glyphicon place in navbar
Fix bug with showing review comments for already checked code
Fix bug with smooth scrolling in left menu
Fix bug in analytics with total unit viewed people counter

--- a/src/uLearn.Web/Content/Site.css
+++ b/src/uLearn.Web/Content/Site.css
@@ -76,7 +76,7 @@ input[type="checkbox"].input-validation-error {
 }
 
 .navbar .dropdown .glyphicon {
-	line-height: inherit;
+	height: 20px;
 }
 
 @media (max-width: 767px) {
@@ -145,6 +145,7 @@ a.no-underline:focus {
 .mt10 { margin-top: 10px; }
 
 .hidden-xs-inline { display: inline !important; }
+.hidden-xs-inline-block { display: inline-block !important; }
 .visible-xs-inline { display: none !important; }
 
 @media (min-width: 768px) {
@@ -154,6 +155,7 @@ a.no-underline:focus {
 
 @media (max-width: 767px) {
 	.hidden-xs-inline { display: none !important; }
+	.hidden-xs-inline-block { display: none !important; }
 	.visible-xs-inline { display: inline-block !important; }
 }
 
