--- a/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
@@ -23,7 +23,7 @@
 	<div class="row">
 		<div class="col-sm-6">
 			<textarea class="exercise__add-review__comment"></textarea>
-			<button class="exercise__add-review__button btn btn-success btn-sm mt10">Сохранить</button>
+			<button class="exercise__add-review__button btn btn-success btn-sm mt10">Сохранить (Ctrl+Enter)</button>
 		</div>
 		<div class="col-sm-6 exercise__add-review__top-comments">
 			<b>Популярные комментарии</b>
