Fix one more bug on courseId case sensetiveness on admin panel

--- a/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
+++ b/src/uLearn.Web/Views/Shared/_UserListPartial.cshtml
@@ -40,7 +40,7 @@
 					</div>
 				</td>
 			}
-			@if (@Model.ShowDangerEntities)
+			@if (Model.ShowDangerEntities)
 			{
 				<td>
 					@using (Html.BeginForm("DeleteUser", "Account", new { userId = user.UserId }, FormMethod.Post))
