Added logging, fix bugs
RunCsJob now runs compilers from its directory, not from current.
Submissions' compiling  directory is configurable

--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -96,7 +96,7 @@
 			<footer>
 				<div>
 					<p>
-						Это ulearn — платформа с интерактивными онлайн-курсам по программированию.
+						Это ulearn — платформа с интерактивными онлайн-курсами по программированию.
 					</p>
 					<p>
 						Сделано в <a href="https://kontur.ru">СКБ Контур</a>.
