Newlines in quizes choice questions
Email in footer

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -961,6 +961,10 @@ li.li-success {
     margin-left: 10px;
 }
 
+.quiz-block-mark .quiz label {
+    white-space: pre-wrap;
+}
+
 /* Ordering quizes */
 .quiz-block-ordering ul {
 	list-style: none;
