--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -98,10 +98,11 @@
 					<p>
 						Это ulearn — платформа с интерактивными онлайн-курсами по программированию.
 					</p>
-					<p>
-						Сделано в <a href="https://kontur.ru">СКБ Контур</a>.
-						@Html.ActionLink("Условия использования", "Terms", "Home").
-					</p>
+				    <p>
+				        Сделано в <a href="https://kontur.ru">СКБ Контур</a>.
+				        @Html.ActionLink("Условия использования", "Terms", "Home").
+				    </p>
+				    <p>С вопросами и пожеланиями пишите на <a href="mailto:support@ulearn.me">support@ulearn.me</a>.</p>
 				</div>
 			</footer>
 		</div>
