Slide.Index → Slide.Id

--- a/src/uLearn.Web/Views/Analytics/UsersProgress.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UsersProgress.cshtml
@@ -24,7 +24,7 @@
 					text = "Посещаемость:";
 				}
 				<th>
-					<p>@Html.ActionLink(slide.Title, "Slide", "Course", new{courseId=Model.CourseId, slideIndex = slide.Index}, null)</p>
+					<p>@Html.ActionLink(slide.Title, "SlideById", "Course", new{courseId=Model.CourseId, slideId = slide.Id}, null)</p>
 					<p>@text</p>
 				</th>
 			}
