--- a/src/uLearn.Web/Views/Course/InstructorNote.cshtml
+++ b/src/uLearn.Web/Views/Course/InstructorNote.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-@Html.Action("TableOfContents", "SlideNavigation", new { courseId = Model.CourseId, slideIndex = -1 })
+@Html.Action("TableOfContents", "SlideNavigation", new { courseId = Model.CourseId })
 
 <div class="slide-container">
 	<div class="container body-content">
