--- a/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
+++ b/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
@@ -13,7 +13,7 @@
 			<div class="row">
 				<h1 class='page-header'>Решения</h1>
 				@AcceptedSolutionsHtml.AcceptedSolutions(Model)
-				@Html.Action("PrevNextButtons", "SlideNavigation", new { courseId = Model.CourseId, slideIndex = Model.Slide.Index, onSolutionsSlide = true, isGuest = false })
+				@Html.Action("PrevNextButtons", "SlideNavigation", new { courseId = Model.CourseId, slideId = Model.Slide.Id, onSolutionsSlide = true, isGuest = false })
 			</div>
 		</div>
 	</div>
