--- a/src/uLearn.Web/Views/Course/LtiExerciseSlide.cshtml
+++ b/src/uLearn.Web/Views/Course/LtiExerciseSlide.cshtml
@@ -1,4 +1,5 @@
-﻿@using uLearn.Web.Views.Course
+﻿@using uLearn
+@using uLearn.Web.Views.Course
 @model CodeModel
 
 @{
@@ -17,7 +18,7 @@
 		@SlideHtml.Block(Model.ExerciseBlock, Model.Context, Html)
 
 		@Scripts.Render("~/main-js")
-		<script> getHints("@Model.CourseId", "@Model.SlideIndex", '@Model.ExerciseBlock.HintsMd.Count') </script>
+		<script> getHints("@Model.CourseId", "@Model.SlideId.GetNormalizedGuid()", '@Model.ExerciseBlock.HintsMd.Count') </script>
 		<script> refreshPreviousDraft('@Model.SlideId') </script>
 	}
 </body>
