Fix bugs in course tool' edx interaction
Fix https cloudflare bug for lti signature calculation
Extensions namespace and folder

--- a/src/uLearn.Web/Views/Admin/Packages.cshtml
+++ b/src/uLearn.Web/Views/Admin/Packages.cshtml
@@ -1,4 +1,5 @@
-﻿@model uLearn.Web.Controllers.PackagesViewModel
+﻿@using uLearn.Web.Extensions
+@model uLearn.Web.Controllers.PackagesViewModel
 
 @{
 	ViewBag.Title = "Пакеты";
