--- a/src/uLearn.Web/Views/Course/AcceptedSolutionsHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/AcceptedSolutionsHtml.cshtml
@@ -1,6 +1,7 @@
 ﻿@* Generator: MvcHelper GeneratePrettyNames: true DisableLinePragmas: true *@
 @using uLearn
 @using uLearn.Model.Blocks
+@using uLearn.Web.Extensions
 @using uLearn.Web.Models
 @using uLearn.Web.Views.Course
 
