--- a/src/uLearn.Web/Views/Exercise/Submission.cshtml
+++ b/src/uLearn.Web/Views/Exercise/Submission.cshtml
@@ -1,5 +1,6 @@
 ﻿@using uLearn
 @using uLearn.Web.Controllers
+@using uLearn.Web.Extensions
 @using uLearn.Web.Views.Course
 
 @model ExerciseBlockData
