--- a/src/uLearn.Web/Views/Exercise/_ExerciseReview.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseReview.cshtml
@@ -1,4 +1,5 @@
-﻿@model ExerciseCodeReviewModel
+﻿@using uLearn.Web.Extensions
+@model ExerciseCodeReviewModel
 	
 <div class="exercise__review"
 	 data-id="@Model.Review.Id"
