--- a/src/uLearn.Web/Views/Quiz/Quiz.cshtml
+++ b/src/uLearn.Web/Views/Quiz/Quiz.cshtml
@@ -1,5 +1,6 @@
 ﻿@using uLearn
 @using uLearn.Quizes
+@using uLearn.Web.Extensions
 @using uLearn.Web.Views.Course
 @using uLearn.Web.Views.Shared.Helpers
 @model QuizModel
