--- a/src/uLearn.Web/Views/Shared/UserAvatar.cshtml
+++ b/src/uLearn.Web/Views/Shared/UserAvatar.cshtml
@@ -1,5 +1,6 @@
 ﻿@* Generator: MvcHelper GeneratePrettyNames: true DisableLinePragmas: true *@
 @using uLearn.Web
+@using uLearn.Web.Extensions
 @* ReSharper disable once RedundantUsingDirective *@
 @using uLearn.Web.Models
 
