--- a/src/uLearn.Web/Views/Admin/CourseList.cshtml
+++ b/src/uLearn.Web/Views/Admin/CourseList.cshtml
@@ -1,4 +1,5 @@
-﻿@model uLearn.Web.Controllers.CourseListViewModel
+﻿@using uLearn.Web.Extensions
+@model uLearn.Web.Controllers.CourseListViewModel
 
 @{
 	ViewBag.Title = "Курсы";
