--- a/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
+++ b/src/uLearn.Web/Views/Admin/ManualQuizCheckingQueue.cshtml
@@ -1,4 +1,5 @@
-﻿@model uLearn.Web.Controllers.ManualCheckingQueueViewModel
+﻿@using uLearn.Web.Extensions
+@model uLearn.Web.Controllers.ManualCheckingQueueViewModel
 
 @{
 	ViewBag.Title = "Очередь на проверку";
