--- a/src/uLearn.Web/Views/Admin/_ManualCheckingQueueFilterForm.cshtml
+++ b/src/uLearn.Web/Views/Admin/_ManualCheckingQueueFilterForm.cshtml
@@ -1,4 +1,5 @@
-﻿@model uLearn.Web.Controllers.ManualCheckingQueueViewModel
+﻿@using uLearn.Web.Extensions
+@model uLearn.Web.Controllers.ManualCheckingQueueViewModel
 
 @using (Html.BeginForm(Url.RequestContext.RouteData.GetRequiredString("Action"), "Admin", FormMethod.Get, new { id = "manual-checking-queue-filter-form" }))
 {
