--- a/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
+++ b/src/uLearn.Web/Views/Course/CourseInstructorNavbar.cshtml
@@ -1,4 +1,5 @@
-﻿@model CourseInstructorNavbarViewModel
+﻿@using uLearn.Web.Extensions
+@model CourseInstructorNavbarViewModel
 
 @if (Model != null)
 {
