--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -1,6 +1,7 @@
 ﻿@using System
 @using uLearn
 @using uLearn.Quizes
+@using uLearn.Web.Extensions
 @using uLearn.Web.Views.Course
 @model CoursePageModel
 
