--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -3,6 +3,7 @@
 @using uLearn.Model.Blocks
 @using uLearn.Quizes
 @using uLearn.Web.Controllers
+@using uLearn.Web.Extensions
 @* ReSharper disable RedundantUsingDirective *@
 @using uLearn.Web.Models
 @* ReSharper restore RedundantUsingDirective *@
