--- a/src/uLearn.Web/Views/Exercise/SubmissionsPanel.cshtml
+++ b/src/uLearn.Web/Views/Exercise/SubmissionsPanel.cshtml
@@ -1,4 +1,5 @@
-﻿@model uLearn.Web.Controllers.ExerciseSubmissionsPanelModel
+﻿@using uLearn.Web.Extensions
+@model uLearn.Web.Controllers.ExerciseSubmissionsPanelModel
 
 @functions
 {
