--- a/src/uLearn.Web/Views/Sandbox/RunCode.cshtml
+++ b/src/uLearn.Web/Views/Sandbox/RunCode.cshtml
@@ -1,4 +1,5 @@
-﻿@using uLearn.Web.Views.Course
+﻿@using uLearn.Web.Extensions
+@using uLearn.Web.Views.Course
 @model dynamic
 @{
 	ViewBag.Title = "Run code";
